--- a/kadai_005/kadai_005.ipynb
+++ b/kadai_005/kadai_005.ipynb
@@ -23,20 +23,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "XCJR473uxhe0",
-        "outputId": "f67a51e0-af35-46be-fce5-b56b6fd195bb"
+        "outputId": "206f3e0f-e8ff-42e5-8fed-d950bd4d8cf4"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "75.0\n"
+            "75.0cm2\n"
           ]
         }
       ],
@@ -46,7 +46,7 @@
         "height=5\n",
         "\n",
         "area=(upper_length+lower_length)*height/2\n",
-        "print(area)"
+        "print(str(area)+\"cm2\")"
       ]
     },
     {
