--- a/kadai_005/kadai_005.ipynb
+++ b/kadai_005/kadai_005.ipynb
@@ -46,7 +46,7 @@
         "height=5\n",
         "\n",
         "area=(upper_length+lower_length)*height/2\n",
-        "print(str(area)+\"cm2\")"
+        "print(str(area)+\"cm²\")"
       ]
     },
     {
