--- a/kadai_013/kadai_013.ipynb
+++ b/kadai_013/kadai_013.ipynb
@@ -17,34 +17,32 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "N6z2cElqtYbE",
-        "outputId": "5d4d62eb-f5d3-4333-efca-9ff8e14bc511"
+        "outputId": "c7746e7f-ed82-48f7-f007-038825b7112c"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(110.00000000000001, 10.0)"
+              "121.00000000000001"
             ]
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 7
         }
       ],
       "source": [
-        "def add_tax(price: float ):\n",
-        " total=price*1.1\n",
-        " tax=price*0.1\n",
-        " return total, tax\n",
+        "def add_tax(price, tax ):\n",
+        " total=price*(1+tax/100)\n",
+        " return total\n",
         "\n",
-        "test=100\n",
-        "add_tax(test)\n",
+        "add_tax(110,10)\n",
         "\n",
         "\n",
         "\n"
