--- a/kadai_014/kadai_014.ipynb
+++ b/kadai_014/kadai_014.ipynb
@@ -19,7 +19,8 @@
       "execution_count": 2,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "fyVWPuRBw5zK",
         "outputId": "8f537e25-3e33-4383-c735-77803f66ea67"
