--- a/kadai_017/kadai_017.ipynb
+++ b/kadai_017/kadai_017.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "a2fa1fd0",
    "metadata": {},
    "outputs": [
@@ -10,12 +10,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "大人です。\n",
-      "大人です。\n",
-      "子供です。\n",
-      "子供です。\n",
-      "子供です。\n",
-      "子供です。\n"
+      "一郎さんは大人です。\n",
+      "次郎さんは大人です。\n",
+      "三郎さんは大人です。\n",
+      "四郎さんは子供です。\n",
+      "五郎さんは子供です。\n",
+      "六郎さんは子供です。\n"
      ]
     }
    ],
@@ -26,10 +26,10 @@
     "        self.age = age\n",
     "    \n",
     "    def check_adult(self):\n",
-    "        if self.age > 20:\n",
-    "            print(\"大人です。\")\n",
+    "        if self.age >= 20:\n",
+    "            print(f\"{self.name}さんは大人です。\")\n",
     "        else:\n",
-    "            print(\"子供です。\")\n",
+    "            print(f\"{self.name}さんは子供です。\")\n",
     "        \n",
     "        return\n",
     "\n",
